--- a/quest.html
+++ b/quest.html
@@ -6,6 +6,7 @@
     <title>Хакерский Веб-Квест - Миссия</title>
     <link rel="stylesheet" href="quest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="no-scanline.css">
 </head>
 <body>
     <div class="container">
@@ -86,10 +87,6 @@
                 </div>
             </div>
         </main>
-        
-        <div class="terminal-effects">
-            <div class="overlay"></div>
-        </div>
     </div>
     
     <script src="quest.js"></script>
