--- a/quest.html
+++ b/quest.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>Хакерский Веб-Квест - Миссия</title>
     <link rel="stylesheet" href="quest.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -89,6 +92,6 @@
         </main>
     </div>
     
-    <script src="quest.js"></script>
+    <script src="quest.js?v=1.0.1"></script>
 </body>
 </html> 
