--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h2>[ ЗАСЕКРЕЧЕННЫЙ ВЕБ-КВЕСТ ]</h2>
                 <p>Добро пожаловать в мир хакеров и цифровых головоломок. Вам предстоит погрузиться в тайны информатики и математики, решая сложные загадки и преодолевая препятствия в киберпространстве.</p>
                 <p>Ваша миссия: найти пропавшего Tralalelo Tralala. Последний раз его видели на пляже... Что с ним случилось? Куда он исчез?</p>
-                <p>В этом задании вы будете работать вместе с таинственным хакером <span class="agent-name">Spijuniro Golubiro</span>, который поможет вам в прохождении квеста и раскрытии тайны.</p>
+                <p>В этом задании вы будете работать вместе с таинственным хакером <span class="agent-name">Spijuniro</span>, который поможет вам в прохождении квеста и раскрытии тайны.</p>
                 <p class="warning">ВНИМАНИЕ: Для выполнения миссии потребуются навыки логического мышления и базовые знания информатики и математики.</p>
             </div>
             
