--- a/quest.html
+++ b/quest.html
@@ -66,10 +66,10 @@
             <div class="side-panel">
                 <div class="agent-profile">
                     <div class="agent-avatar">
-                        <img src="golubini.gpej" alt="Spijuniro Golubiro" id="agent-avatar">
+                        <img src="golubini.gpej" alt="Spijuniro" id="agent-avatar">
                     </div>
                     <div class="agent-info">
-                        <h3>Spijuniro Golubiro</h3>
+                        <h3>Spijuniro</h3>
                         <p class="agent-status online">В сети</p>
                     </div>
                 </div>
